<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    card_view:cardBackgroundColor="@color/cardview_shadow_end_color"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">


    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/string_title"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/element_title"/>

        <TextView
            android:text="@string/string_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/element_description"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@android:drawable/ic_menu_preferences"
                android:layout_alignParentStart="true"
                android:id="@+id/imageView"
                android:layout_alignParentLeft="true"
                tools:ignore="ContentDescription"/>

            <TextView
                android:text="@string/string_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/element_language"
                android:layout_toEndOf="@id/imageView"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/imageView"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@android:drawable/ic_menu_view"
                android:id="@+id/imageView2"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/element_language"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/element_language"
                tools:ignore="ContentDescription"/>

            <TextView
                android:text="@string/string_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/element_watchers"
                android:layout_toEndOf="@id/imageView2"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/imageView2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@android:drawable/ic_menu_share"
                android:id="@+id/imageView3"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/element_watchers"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/element_watchers"
                tools:ignore="ContentDescription"/>

            <TextView
                android:text="@string/string_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/element_fork"
                android:layout_toEndOf="@id/imageView3"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/imageView3"/>

        </RelativeLayout>

        <TextView
            android:text="@string/string_lastupdate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/element_lastUpdate"
            android:layout_weight="1"/>
    </LinearLayout>
</android.support.v7.widget.CardView>